<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgCopertina_Film"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_launcher_foreground" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDatiFilm_Film"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblTitolo_Film"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/lblTitolo"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblAnnoUscita_Film"
                    android:layout_width="100dp"
                    android:layout_height="53dp"
                    android:layout_weight="1"
                    android:paddingStart="3dp"
                    android:text="@string/lblAnnoUscita" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblGeneri_Film"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/lblDurata_Film"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="3dp"
                    android:text="@string/lblDurata" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>